manifests/external.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mock
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock
  namespace: mock
spec:
  selector:
    matchLabels:
      app: mock
  template:
    metadata:
      labels:
        app: mock
    spec:
      containers:
      - name: mock
        image: mock:test
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
---
apiVersion: v1
kind: Service
metadata:
  name: mock
  namespace: mock
spec:
  selector:
    app: mock
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: https
    port: 8443
    targetPort: https
    protocol: TCP
