manifests/mesh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: foo
        image: foo:test
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: foo
spec:
  selector:
    app: foo
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
