manifests/traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: slack
spec:
  hosts:
  - slack.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: istio-egressgateway
# spec:
#   selector:
#     istio: egressgateway
#   servers:
#   - port:
#       number: 443
#       name: https-port-for-tls-origination
#       protocol: HTTPS
#     hosts:
#     - slack.com
#     tls:
#       mode: ISTIO_MUTUAL
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: egressgateway-for-slack
# spec:
#   host: istio-egressgateway.istio-system.svc.cluster.local
#   subsets:
#   - name: slack
#     trafficPolicy:
#       loadBalancer:
#         simple: ROUND_ROBIN
#       portLevelSettings:
#       - port:
#           number: 443
#         tls:
#           mode: ISTIO_MUTUAL
#           sni: slack.com
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: direct-slack-through-egress-gateway
# spec:
#   hosts:
#   - slack.com
#   gateways:
#   - istio-egressgateway
#   - mesh
#   tls:
#   - match:
#     # pod -> egressgateway
#     - gateways:
#       - mesh
#       port: 443
#       sniHosts:
#         - slack.com
#     route:
#     - destination:
#         host: istio-egressgateway.istio-system.svc.cluster.local
#         subset: slack
#         port:
#           number: 443
#       weight: 100
#################
#     NGINX     #
#################
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: mock
  labels:
    app: my-nginx
spec:
  ports:
  - port: 443
    protocol: TCP
  selector:
    app: my-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: mock
spec:
  selector:
    matchLabels:
      app: my-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
          readOnly: true
        - name: nginx-server-certs
          mountPath: /etc/nginx-server-certs
          readOnly: true
        - name: nginx-ca-certs
          mountPath: /etc/nginx-ca-certs
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-configmap
      - name: nginx-server-certs
        secret:
          secretName: nginx-server-certs
      - name: nginx-ca-certs
        secret:
          secretName: nginx-ca-certs
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - my-nginx.mock.svc.cluster.local
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-nginx
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: nginx
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: my-nginx.mock.svc.cluster.local
---
#              mtls
# mtls gateway <==> nginx
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-mtls-for-nginx
spec:
  host: my-nginx.mock.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: MUTUAL
        credentialName: client-credential # this must match the secret created earlier to hold client certs
        sni: my-nginx.mock.svc.cluster.local
---
# route slack.com -> gateway
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-slack-through-egress-gateway
spec:
  hosts:
  - slack.com
  tls:
  - match:
    - port: 443
      sniHosts:
      - slack.com
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: ngnix
        port:
          number: 443
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: ngnix
        port:
          number: 443
